# Rust-Projects

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  diesel.toml  docker-compose.yml  init.sql  rustfmt.toml
Readme/: gpu-help.md  lxc-help.md  minio-help.md  mongodb-help.md  podman-help.md  postgres-help.md  t-mux.md
Rusty-Journal/: README.md  test-journal.json
Rusty-Journal/src/: tasks.rs
async-await/: Cargo.toml
async-await/src/: main.rs
blog-post/: Cargo.toml  Rocket.toml
blog-post/migrations/2023-01-08-133324_create_batchdef/: up.sql
blog-post/src/: index.html  main.rs
chat-app/: Cargo.toml  README.md
chat-app/src/: main.rs
ebpf_examples/: readme.md
ebpf_examples/xdp-hello/: Cargo.toml  setup.sh
ebpf_examples/xdp-hello/.vim/: coc-settings.json
ebpf_examples/xdp-hello/xdp-hello-ebpf/src/: main.rs
ebpf_examples/xdp-hello/xdp-hello/src/: main.rs
ebpf_examples/xdp-log/: setup.sh
firebase-connection/: .env  Cargo.toml  readme.md
firebase-connection/src/: helper.rs  main.rs  structs.rs
granthalaya/: .env  Cargo.toml  README.md
granthalaya/src/: actors.rs  db_utils.rs  insertable.rs  main.rs  messages.rs  models.rs  schema.rs  services.rs
grpc/: Cargo.toml  README.md  build.rs
grpc/proto/: greeter.proto
grpc/src/: client.rs  server.rs
guess_game/src/: main.rs
helper_lib/: .env  Cargo.toml  readme.md
helper_lib/src/: lib.rs
interview/impact-analytics/: Cargo.toml
interview/impact-analytics/src/: main.rs
migrations/2023-01-08-133324_create_batchdef/: down.sql
migrations/2023-09-17-001_users/: up.sql
migrations/2023-09-17-002_transaction_types/: down.sql  up.sql
migrations/2023-09-17-003_blocks/: up.sql
migrations/2023-09-17-004_transactions/: up.sql
migrations/2023-09-17-005_account_types/: up.sql
migrations/2023-09-17-006_accounts/: up.sql
migrations/2023-09-17-007_events/: up.sql
mongodb-connection/: .env  Cargo.toml  readme.md
mongodb-connection/src/: main.rs
read-write/: .env  Cargo.toml
read-write/test-bed/: append.txt  example.txt  output.txt
rust-redis/: .env  Cargo.toml  readme.md
rust-redis/src/: main.rs
rust_practice/lifetime/src/: main.rs
rust_practice/logger/: Cargo.toml
rust_practice/logger/src/: main.rs
rust_practice/modules/src/: main.rs
rust_practice/oops_conecpts/: Cargo.toml
rust_practice/oops_conecpts/src/: main.rs
rust_practice/serde/: Cargo.toml
rust_practice/serde/src/: main.rs
rust_practice/smart_pointer/src/: main.rs
scheduler/: .env  Cargo.toml  readme.md
scheduler/src/: main.rs
src/: container.rs  create_app.rs  lib.rs  main.rs  open_api.rs
src/api/controllers/: account_handler.rs  block_handler.rs  event_handler.rs  health_check.rs  mod.rs  transaction_handler.rs  user_handler.rs
src/api/dto/: account.rs  block.rs  event.rs  transaction.rs  user.rs
src/domain/: constants.rs  error.rs
src/domain/models/: account.rs  block.rs  event.rs  user.rs
src/domain/models/transaction/: deposit.rs  mod.rs  status.rs  transfer.rs  txn_type.rs  withdrawal.rs
src/domain/repositories/: account.rs  block.rs  event.rs  mod.rs  repository.rs  transaction.rs  user.rs
src/domain/services/: account.rs  block.rs  event.rs  mod.rs  orchestrator.rs  transaction.rs  user.rs
src/infrastructure/: error.rs  schema.rs
src/infrastructure/databases/: pgsql.rs
src/infrastructure/models/: account.rs  block.rs  event.rs  transaction.rs  user.rs
src/infrastructure/repositories/: account.rs  block.rs  event.rs  mod.rs  transaction.rs  user.rs
src/services/: account.rs  block.rs  event.rs  mod.rs  orchestrator.rs  transaction.rs  user.rs  validation.rs
src/utils/: account_utils.rs  hash_util.rs  mod.rs
tests/: common.rs  health_check.rs  test_deposit.rs  test_transfer.rs  test_user_handler.rs
todolist_api/: Cargo.toml  README.md
todolist_api/src/: main.rs
todolist_api/src/todolist/: models.rs  services.rs
user-defined-smart-pointer/: Cargo.toml
user-defined-smart-pointer/src/: main.rs
webhook/client/: Cargo.toml
webhook/client/src/: main.rs
webhook/server/: Cargo.toml
webhook/server/src/: main.rs
webhook/webhook-server/: Cargo.toml
webhook/webhook-server/src/: main.rs
