[package]
name = "blog-post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel_cli = { version = "1.4.1", default-features = false }
features = { version = "0.10.0", default-features = false }
postgres = { version = "0.19.4", default-features = false }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.140"
