[package]
name = "firebase-connection"
version = "0.1.0"
edition = "2021"
authors= ["ravindar-02<ravindar.rathaur@systango.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firebase-rs = "2.0.5"
serde = "1.0.147"
serde_json = "1.0"
tokio = { version = "1.21.2", features = ["full"] }
helper_lib={path="../helper_lib"}
firebase-app-sdk = "0.1.4"
